Testing embedded code

--- a/2017-10-20-test.md
+++ b/2017-10-20-test.md
@@ -1,6 +1,11 @@
 # Testing Jekyll
 
-Below is some C# code:
+Below is some JavaScript code:
+
+```js
+console.log("Test");
+```
 
 ```C#
 public Task DoAsync() => Task.FromResult(0);
+```
