Testing embedded code

--- a/2017-10-20-test.md
+++ b/2017-10-20-test.md
@@ -6,6 +6,8 @@ Below is some JavaScript code:
 console.log("Test");
 ```
 
+And here is some C#:
+
 ```C#
 public Task DoAsync() => Task.FromResult(0);
 ```
