Testing embedded code

--- a/2017-10-20-test.md
+++ b/2017-10-20-test.md
@@ -6,8 +6,14 @@ Below is some JavaScript code:
 console.log("Test");
 ```
 
+Some TypeScript:
+
+```ts
+console.log("Test");
+```
+
 And here is some C#:
 
-```C#
+```cs
 public Task DoAsync() => Task.FromResult(0);
 ```
